# stockodile

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.ralph/: LEDGER.md  PROGRESS.md  RATCHET.json  crashloop.events
.ralph/.canonical/: RATCHET.json  state.json
.ralph/iter/000001/: claim_vs_truth.json  (+1 more)
.ralph/iterations/: 000001.json
docs/: BENCHMARKS.md
docs/superpowers/: HANDOFF.md
examples/: collect_base_onchain.py
src/stockodile/: __init__.py  api_server.py  api_server_html.py  cli.py  mcp_server.py
tests/: conftest.py  test_analytics.py  test_api_payment_security.py  test_cli.py  test_client.py  test_corpactions.py  test_coverage_resolver.py  test_depth_api.py  test_depth_cli.py  test_depth_sources.py  test_depth_store_roundtrip.py  test_depth_vap.py  test_dummy.py  test_indicators.py  test_ingest.py  test_mcp_server.py  test_openfigi.py  test_path_defaults.py  test_proof.py  test_proxy_and_key_pool.py  test_ratelimit.py  test_reference.py  test_replay.py  test_resample.py  test_scheduler.py  test_sec_edgar.py  test_slippage.py  test_store_rows.py  test_tiingo.py  test_time.py  test_yahoo.py  verify_mcp.py
tests/e2e/: .test_custom_pools_ipc_44714.json  conftest.py  mock_rpc_server.py  test_rate_limiting_and_cors.py  test_smoke_e2e.py  test_tier1_features.py  test_tier2_boundaries.py  test_tier3_combinations.py  test_tier4_real_world.py
tests/providers/: __init__.py  test_alpaca.py  test_finnhub.py  test_google_finance.py  test_msn_money.py  test_stooq.py
tests/store/: test_catalog.py  test_parquet_sink.py  test_rows.py
(+108 files in other folders)
