[project]
name = "stockodile"
version = "0.1.0"
description = "Open-source US-equity market-data engine: ingest, normalize, store, retrieve anywhere."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "msgspec>=0.18",
    "polars>=1.0",
    "pyarrow>=16",
    "duckdb>=1.0",
    "websockets>=12",
    "aiohttp>=3.9",
    "typer>=0.12",
    "rich>=13",
    "mmh3>=5.2.1",
    "yfinance>=1.4.1",
    "web3>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
stockodile = "stockodile.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-timeout>=2",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockodile"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
timeout = 45
timeout_method = "thread"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["stockodile"]
strict = true
ignore_missing_imports = true

